# Kurs_7_DZ_24.1

./: .env.exampl  README.md  db.json  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
course/: models.py  paginations.py  serializer.py  tasks.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_course_author.py
lesson/: models.py  serializer.py  tests.py  urls.py  validators.py  views.py
lesson/migrations/: 0001_initial.py  0002_alter_lesson_options.py  0003_lesson_author.py
payment/: models.py  serializer.py  services.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_payment_paid_course_alter_payment_paid_lesson_and_more.py  0003_alter_payment_paid_course_alter_payment_paid_lesson.py  0004_remove_payment_paid_course_and_more.py  0005_alter_payment_options_payment_link_and_more.py
subscription/: models.py  serializer.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py
users/: models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_last_login.py  0003_alter_user_last_login.py  0004_alter_user_last_login.py  0005_alter_user_last_login.py
